[tool.poetry]
name = "yanxi-integration"
version = "1.0.0"
description = "言犀 AI 智能通话助手 — 四项目整合版"
authors = ["YanXi Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"

# ==================== LLM API ====================
openai = ">=1.50.0"
zhipuai = ">=2.0.0"
dashscope = ">=1.20.0"

# ==================== LangChain 全家桶 ====================
langchain = ">=0.3.0"
langchain-core = ">=0.3.0"
langchain-community = ">=0.3.0"
langchain-openai = ">=0.2.0"
langchain-chroma = ">=0.2.0"
langgraph = ">=0.2.0"

# ==================== 向量 & Embedding ====================
chromadb = ">=0.5.0"
sentence-transformers = ">=2.7.0"

# ==================== 检索增强 (RAG) ====================
rank-bm25 = ">=0.2.2"
jieba = ">=0.42.1"

# ==================== 语音模块 ====================
faster-whisper = ">=1.0.0"
edge-tts = ">=6.1.0"
pygame = ">=2.5.0"

# ==================== 数据处理 ====================
pyyaml = ">=6.0"
numpy = ">=1.26.0"
pydantic = ">=2.0.0"
pandas = ">=2.0.0"
python-dotenv = ">=1.0.0"

# ==================== API 服务 ====================
fastapi = ">=0.115.0"
uvicorn = {version = ">=0.32.0", extras = ["standard"]}

# ==================== 可选依赖 ====================
torch = {version = ">=2.0.0", optional = true}
matplotlib = {version = ">=3.7.0", optional = true}
seaborn = {version = ">=0.12.0", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.24.0"

[tool.poetry.extras]
gpu = ["torch"]
viz = ["matplotlib", "seaborn"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
yanxi = "src.main:main"
yanxi-api = "src.api:start"
